# cpp-cmake-template

./: .gitignore  CMakeLists.txt  README.md
cmake/: util.cmake
examples/: CMakeLists.txt
examples/main/: basic_main.cpp  di_main.cpp
include/lib/: library.h
include/lib/di/Bar/: bar.h  barInterface.h
include/lib/di/Foo/: foo.h  fooInterface.h
include/lib/di/FooBar/: fooBar.h  fooBarInterface.h
lib/fmt/: CMakeLists.txt
src/lib/: library.cpp
src/lib/di/: bar.cpp  foo.cpp  fooBar.cpp
tests/: CMakeLists.txt
tests/mocks/: BarMock.h  FooMock.h
tests/unit/: fooBar_test.cpp  library_test.cpp
